Fix typo in en/packages.html, fix it/kernel.html

--- a/en/packages.html
+++ b/en/packages.html
@@ -89,7 +89,7 @@
 
 	<article>
 		<p>
-			If you want more packages for Gentoo, click the button below to open a page with my contact details, to contact me and send me your requests.
+			If you want more Gentoo packages, click the button below to open a page with my contact details, to contact me and send me your request.
 		</p>
 
 		<nav class="right-align small-margin">
