--- a/it/kernel.html
+++ b/it/kernel.html
@@ -313,27 +313,19 @@
 		</article>
 
 		<p class="small-space">
-		&Egrave; una buona pratica controllare la configurazione del Kernel prima di compilarlo.
-		Per fare ci&ograve;, lo script <u>build.sh</u> rende possibile la modifica della configurazione,
-		eseguendo <u>make menuconfig</u> nella directory in cui &egrave; presente il Kernel,
-		con l&apos;opzione di copiare quella di default, o senza copiarla, per usare il proprio file di configurazione.
+		&Egrave; una buona pratica controllare la configurazione del Kernel prima di compilarlo. Per fare ci&ograve;, lo script <u>build.sh</u> rende possibile la modifica della configurazione, eseguendo <u>make menuconfig</u> nella directory in cui &egrave; presente il Kernel, con l&apos;opzione di copiare quella di default, o senza copiarla, per usare il proprio file di configurazione.
 		</p>
 
 		<p class="small-space">
-		Assicuratevi di avere i permessi di amministratore prima di eseguire questo comando;
-		se non siete amministratori, ponete all&apos;inizio del comando <b>sudo</b> oppure <b>doas</b>,
-		in base a quale usate.
+		Assicuratevi di avere i permessi di amministratore prima di eseguire questo comando; se non siete amministratori, ponete all&apos;inizio del comando <b>sudo</b> oppure <b>doas</b>, in base a quale usate.
 		</p>
 
 		<p class="card small-space small-padding red white-text">
-		Se non avete capito cosa c&apos;&egrave; scritto qui sopra, <b><u>interrompete immediatamente la configurazione del Kernel</u></b>,
-		per non rischiare di rendere il vostro sistema inutilizzabile.
-		Anche se il rischio non &egrave; elevato, &egrave; meglio prevenire ulteriori problemi.
-		<b><u>Continuate a vostro rischio e pericolo.</u></b>
+		<i class="fill">dangerous</i> Se non avete capito cosa c&apos;&egrave; scritto qui sopra, <b><u>interrompete immediatamente la configurazione del Kernel</u></b>, per non rischiare di rendere il vostro sistema inutilizzabile. Anche se il rischio non &egrave; elevato, &egrave; meglio prevenire ulteriori problemi. <b><u>Continuate a vostro rischio e pericolo.</u></b>
 		</p>
 
 		<p class="card small-space small-padding yellow black-text">
-		Ricordatevi di salvare/copiare il file <b>.config</b> al termine della configurazione!
+		<i>warning</i> Ricordatevi di salvare/copiare il file <b>.config</b> al termine della configurazione!
 		</p>
 
 		<article class="small-padding" style="background-color: #313033"><div class="margin">
